middle not done

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       <div class="text">About Us </div>
       <i class="dropdown icon"></i>
 
+      <a class="item">St. Patrick's Day</a>
+      <div class="ui dropdown fitted item">
         <div class="text">Menus </div>
         <i class="dropdown icon"></i>
         <a class="item">Bar</a>
